--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=37581bf647e6439a32ba",
-    "/css/app.css": "/css/app.css?id=e8cbd5af262647056f28"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
